# programming-game-ai-by-example

./: .gitignore  CMakeLists.txt  build.sh
cmake/: toolchain-mingw64.cmake
src/chapter2-state-machines/: CMakeLists.txt
src/chapter2-state-machines/WestWorld1/: BaseGameEntity.cpp  BaseGameEntity.h  CMakeLists.txt  EntityNames.h  Locations.h  Miner.cpp  Miner.h  MinerOwnedStates.cpp  MinerOwnedStates.h  State.h  main.cpp
src/chapter2-state-machines/WestWorldWithMessaging/: CMakeLists.txt  MessageDispatcher.cpp  MessageDispatcher.h  MinerOwnedStates.cpp  MinersWife.h  MinersWifeOwnedStates.cpp  main.cpp
src/chapter2-state-machines/WestWorldWithWoman/: CMakeLists.txt  Miner.cpp  MinersWife.h  StateMachine.h  main.cpp
src/chapter3-steering-behaviors/: BaseGameEntity.h  CMakeLists.txt  EntityFunctionTemplates.h  GameWorld.cpp  GameWorld.h  MovingEntity.h  Obstacle.cpp  Obstacle.h  ParamLoader.cpp  ParamLoader.h  Path.cpp  Path.h  SteeringBehaviors.cpp  SteeringBehaviors.h  Vehicle.cpp  Vehicle.h  main.cpp  params.ini
src/chapter4-simple-soccer/: CMakeLists.txt  FieldPlayer.cpp  FieldPlayer.h  FieldPlayerStates.cpp  FieldPlayerStates.h  Goal.h  GoalKeeper.cpp  GoalKeeper.h  GoalKeeperStates.cpp  GoalKeeperStates.h  ParamLoader.h  PlayerBase.cpp  PlayerBase.h  SoccerBall.cpp  SoccerBall.h  SoccerPitch.cpp  SoccerPitch.h  SoccerTeam.cpp  SoccerTeam.h  SteeringBehaviors.cpp  SteeringBehaviors.h  SupportSpotCalculator.cpp  SupportSpotCalculator.h  TeamStates.cpp  TeamStates.h  main.cpp
src/chapter5-pathfinder/: CMakeLists.txt  Pathfinder.cpp  Pathfinder.h  main.cpp
src/common/: CMakeLists.txt
src/common/2d/: C2DMatrix.h  Geometry.cpp  Geometry.h  InvertedAABBox2D.h  Transformations.h  Vector2D.h  Vector2d.cpp  Wall2D.h  WallIntersectionTests.h
src/common/debug/: DebugConsole.cpp  DebugConsole.h
src/common/fsm/: State.h  StateMachine.h
src/common/fuzzy/: FuzzyHedges.h  FuzzyModule.cpp  FuzzyModule.h  FuzzyOperators.cpp  FuzzyOperators.h  FuzzyRule.h  FuzzySet.h  FuzzySet_LeftShoulder.cpp  FuzzySet_LeftShoulder.h  FuzzySet_RightShoulder.cpp  FuzzySet_RightShoulder.h  FuzzySet_Shoulder.h  FuzzySet_Singleton.cpp  FuzzySet_Singleton.h  FuzzySet_Triangle.cpp  FuzzySet_Triangle.h  FuzzyTerm.h  FuzzyVariable.cpp  FuzzyVariable.h  FzSet.h
src/common/game/: BaseGameEntity.cpp  BaseGameEntity.h  EntityFunctionTemplates.h  EntityManager.cpp  EntityManager.h  MovingEntity.h  Region.h
src/common/goals/: Goal.h  Goal_Composite.h
src/common/graph/: AStarHeuristicPolicies.h  GraphAlgorithms.h  GraphEdgeTypes.h  GraphNodeTypes.h  HandyGraphFunctions.h  NodeTypeEnumerations.h  SparseGraph.h
src/common/messaging/: MessageDispatcher.cpp  MessageDispatcher.h  Telegram.h
src/common/misc/: CellSpacePartition.h  Cgdi.cpp  Cgdi.h  ConsoleUtils.h  FrameCounter.cpp  FrameCounter.h  IniFileLoaderBase.cpp  IniFileLoaderBase.h  PriorityQueue.h  Smoother.h  Stream_Utility_Functions.h  TypeToString.h  WindowUtils.cpp  WindowUtils.h  autolist.h  iniFileLoaderBase.cpp  iniFileLoaderBase.h  utils.h
src/common/script/: Scriptor.h
src/common/time/: CrudeTimer.cpp  CrudeTimer.h  PrecisionTimer.cpp  PrecisionTimer.h  Regulator.h
src/common/triggers/: Trigger.h  TriggerRegion.h  TriggerSystem.h  Trigger_LimitedLifeTime.h  Trigger_Respawning.h
